src/server/microk8s/sensors/templates/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/esnet: "true"
        io.kompose.service: influxdb
    spec:
      containers:
        - env:
            - name: INFLUXDB_DB
              value: home_db
            - name: INFLUXDB_USER
              value: root
            - name: INFLUXDB_USER_PASSWORD
              value: root
          image: influxdb:1.7
          name: influxdb
          ports:
            - containerPort: 8086
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influxdb2
      restartPolicy: Always
      volumes:
        - name: influxdb2
          persistentVolumeClaim:
            claimName: influxdb2
status: {}
