src/server/microk8s/sensors/templates/mqttbridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mqttbridge
  name: mqttbridge
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mqttbridge
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/esnet: "true"
        io.kompose.service: mqttbridge
    spec:
      containers:
        - env:
            - name: INFLUXDB_ADDRESS
              value: influxdb
            - name: MOSQUITTO_ADDRESS
              value: mosquitto
          image: gluteusmaximus/mqttbridge:1.0.28
          name: mqttbridge
          resources: {}
      restartPolicy: Always
status: {}
