src/server/microk8s/sensors/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
    kubernetes.io/ingress.class: public
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
    - name: service
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: grafana
  type: ClusterIP    
status:
  loadBalancer: {}
