src/server/microk8s/sensors/templates/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  type: NodePort
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
      nodePort: 30183
  selector:
    io.kompose.service: mosquitto
status:
  loadBalancer: {}
